--- a/peoplei/Base.lproj/Main.storyboard
+++ b/peoplei/Base.lproj/Main.storyboard
@@ -88,6 +88,10 @@
                                 <rect key="frame" x="0.0" y="119" width="414" height="733"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <connections>
+                                    <outlet property="dataSource" destination="joH-Up-cLM" id="109-zB-2IC"/>
+                                    <outlet property="delegate" destination="joH-Up-cLM" id="7oX-AK-Xwa"/>
+                                </connections>
                             </tableView>
                             <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Keo-cL-HOS" customClass="BottomBar" customModule="peoplei" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="852" width="414" height="44"/>
